--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
 
+
    <nav>
 
      <div class="navbar">
@@ -87,7 +88,7 @@
 
    <header>
 
-     <object data="assets/images/entregables/images/bg-hero.svg" type="image/svg+xml" class="head__img">
+     <object data="assets/images/bg-hero.svg" type="image/svg+xml" class="head__img">
        <img src="assets/images/entregables/images/bg-hero.png" alt="Cerro trekking">
      </object>
 
@@ -119,8 +120,8 @@
 
          <div class="col-md-6 col-xs-12 cnter__div2">
 
-           <h5 class="cnter__div2__h5">Estadisticas de tu progreso</h5>
-           <p class="cnter__div2__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,.</p>
+           <h5 class="cnter__div2--h5">Estadisticas de tu progreso</h5>
+           <p class="cnter__div2--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,.</p>
          </div>
         </div>
        </div>
@@ -175,15 +176,15 @@
        </div>
      </main>
 
-    <footer>
+    <footer class="footer">
 
       <ul class="footer__ul">
 
-        <li class="footer__ul__li">Legal</li>
-        <li class="footer__ul__li">Cookies</li>
-        <li class="footer__ul__li">Sobre anuncios</li>
+        <li class="footer__ul--li">Legal</li>
+        <li class="footer__ul--li">Cookies</li>
+        <li class="footer__ul--li">Sobre anuncios</li>
       </ul>
 
-      <p class=" p2">2018 Trekk-in SPA</p>
+      <p class="footer__p2">2018 Trekk-in SPA</p>
     </footer>
   </body>
